fix front 6.4 & frontend 4.3.5-4.4.2-v1

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-lista-chequeo/components/tabla-bancos/tabla-bancos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-lista-chequeo/components/tabla-bancos/tabla-bancos.component.html
@@ -37,6 +37,12 @@
                   class="btn-table">
                   Desactivar
           </button>
+
+          <button mat-raised-button 
+                  color="accent" 
+                  class="btn-table">
+                  Activar
+          </button>
     
         </td>
       </ng-container>
