--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/form-verificar-orden-giro/form-verificar-orden-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/form-verificar-orden-giro/form-verificar-orden-giro.component.html
@@ -14,14 +14,19 @@
 
     <div class="d-flex justify-content-center mt-1em colorMainColor">
         <p>Número de orden de giro: <b> ODG_Obr 001 </b></p>
-        <p style="margin-left: 2em;">Número de contrato: <b>N801801</b></p>
+        <ng-container *ngIf="esExpensas === true; else noEsExpensas">
+            <p style="margin-left: 2em;">Llave MEN: <b>STEFA8</b></p>
+        </ng-container>
+        <ng-template #noEsExpensas>
+            <p style="margin-left: 2em;">Número de contrato: <b>N801801</b></p>
+        </ng-template>
     </div>
 
     <mat-card class="shipping-card border">
         <mat-card-content align="left">
             <p><strong>Fecha de generación de orden de giro:</strong> <i>05/10/2020</i></p>
             <p><strong>Número de solicitud:</strong> <i>Sol Pago O 001</i></p>
-            <p><strong>Modalidad de contrato:</strong> <i>Tipo B</i></p>
+            <p *ngIf="esExpensas === false"><strong>Modalidad de contrato:</strong> <i>Tipo B</i></p>
         </mat-card-content>
     </mat-card>
     
@@ -33,7 +38,7 @@
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <app-informacion-general [esRegistroNuevo]="esRegistroNuevo" [esVerDetalle]="esVerDetalle"></app-informacion-general>
+            <app-informacion-general [esRegistroNuevo]="esRegistroNuevo" [esVerDetalle]="esVerDetalle" [esExpensas]="esExpensas"></app-informacion-general>
         </mat-expansion-panel>
 
         <mat-expansion-panel class="expansion-style">
