--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/tabla-verificar-orden-giro/tabla-verificar-orden-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/tabla-verificar-orden-giro/tabla-verificar-orden-giro.component.html
@@ -37,45 +37,93 @@
     </ng-container>
   
     <ng-container matColumnDef="gestion">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
-      <td mat-cell *matCellDef="let element">
-  
-        <button mat-raised-button
-                color="accent" 
-                class="btn-table"
-                [routerLink]="[ 'verificarOrdenGiro', element.id ]">
-                Verificar orden de giro
-        </button>
-        <button mat-raised-button
-                color="accent" 
-                class="btn-table"
-                [routerLink]="[ 'editarOrdenGiro', element.id ]">
-                Ver detalle/Editar
-        </button>
-        <button mat-raised-button
-                color="accent" 
-                class="btn-table"
-                (click)="openDialogEnviarAprobacion()">
-                Enviar para aprobación orden de giro
-        </button>
-        <button mat-raised-button
-                color="accent" 
-                class="btn-table"
-                [routerLink]="[ 'verDetalle', element.id ]">
-                Ver detalle
-        </button>
-        <button mat-raised-button
-                color="accent" 
-                class="btn-table">
-                Devolver orden de giro
-        </button>
-        <button mat-raised-button
-                color="accent" 
-                class="btn-table">
-                Descargar orden de giro
-        </button>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
+        <td mat-cell *matCellDef="let element">
 
-      </td>
+            <ng-container *ngIf="element.esExpensas === true; else noEsExpensas">
+                <button mat-raised-button
+                        color="accent" 
+                        class="btn-table"
+                        [routerLink]="[ 'verificarOrdenGiroExpensas', element.id ]">
+                        Verificar orden de giro
+                </button>
+
+                <button mat-raised-button
+                        color="accent" 
+                        class="btn-table"
+                        [routerLink]="[ 'editarOrdenGiroExpensas', element.id ]">
+                        Ver detalle/Editar
+                </button>
+
+                <button mat-raised-button
+                        color="accent" 
+                        class="btn-table"
+                        (click)="openDialogEnviarAprobacion()">
+                        Enviar para aprobación orden de giro
+                </button>
+
+                <button mat-raised-button
+                        color="accent" 
+                        class="btn-table"
+                        [routerLink]="[ 'verDetalleExpensas', element.id ]">
+                        Ver detalle
+                </button>
+
+                <button mat-raised-button
+                        color="accent" 
+                        class="btn-table">
+                        Devolver orden de giro
+                </button>
+
+                <button mat-raised-button
+                        color="accent" 
+                        class="btn-table">
+                        Descargar orden de giro
+                </button>
+            </ng-container>
+            <ng-template #noEsExpensas>
+                <button mat-raised-button
+                        color="accent" 
+                        class="btn-table"
+                        [routerLink]="[ 'verificarOrdenGiro', element.id ]">
+                        Verificar orden de giro
+                </button>
+
+                <button mat-raised-button
+                        color="accent" 
+                        class="btn-table"
+                        [routerLink]="[ 'editarOrdenGiro', element.id ]">
+                        Ver detalle/Editar
+                </button>
+
+                <button mat-raised-button
+                        color="accent" 
+                        class="btn-table"
+                        (click)="openDialogEnviarAprobacion()">
+                        Enviar para aprobación orden de giro
+                </button>
+
+                <button mat-raised-button
+                        color="accent" 
+                        class="btn-table"
+                        [routerLink]="[ 'verDetalle', element.id ]">
+                        Ver detalle
+                </button>
+
+                <button mat-raised-button
+                        color="accent" 
+                        class="btn-table">
+                        Devolver orden de giro
+                </button>
+
+                <button mat-raised-button
+                        color="accent" 
+                        class="btn-table">
+                        Descargar orden de giro
+                </button>
+            </ng-template>
+
+        </td>
     </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
