--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-evaluacion/form-evaluacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-evaluacion/form-evaluacion.component.html
@@ -2,7 +2,7 @@
   [formGroup]="addressForm"
   novalidate
   (ngSubmit)="onSubmit()"
-  *ngIf="procesoSeleccion.estadoProcesoSeleccionCodigo == estadosProcesoSeleccion.AprobadaAperturaPorComiteFiduciario"
+  *ngIf="mostrarInfo();"
 >
   <div class="d-flex align-items-center">
     <div
