--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-reclamacion-aseguradora-actuacion/form-reclamacion-aseguradora-actuacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-reclamacion-aseguradora-actuacion/form-reclamacion-aseguradora-actuacion.component.html
@@ -20,7 +20,7 @@
               (addressForm.get('resumenReclamacionFiduciaria').invalid && estaEditando)"></quill-editor>
         </div>
         <span class="contador miles" *ngIf="addressForm.controls.resumenReclamacionFiduciaria.value">
-          {{1000 - (textoLimpio(addressForm.get('resumenReclamacionFiduciaria').value))}}
+          {{1000 - (textoLimpio(resumenReclamacionFiduciaria.quillEditor,1000))}}
         </span>
         <span class="contador miles" *ngIf="!addressForm.controls.resumenReclamacionFiduciaria.value"> 1000 </span>
       </div>
