--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/dialog-observaciones/dialog-observaciones.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/dialog-observaciones/dialog-observaciones.component.html
@@ -24,7 +24,7 @@
         </section>
           
         <mat-card class="shipping-card w-80" *ngIf="contratacion.observacion !== undefined">
-          <mat-card-content>
+          <mat-card-content class="h-modal scroll">
 
             <section [innerHTML]="contratacion.observacion" align="left" class="padding-section">
             </section>
