--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/votacion-solicitud-actualiza_cronograma/votacion-solicitud-actualiza_cronograma.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/votacion-solicitud-actualiza_cronograma/votacion-solicitud-actualiza_cronograma.component.html
@@ -48,7 +48,7 @@
           </tbody>
         </table>
       </div>
-      <mat-accordion formGroupName="proyectos">
+      <!-- <mat-accordion formGroupName="proyectos">
         <mat-expansion-panel
           class="expansion-style"
           *ngFor="let proyecto of proyectos.controls; let i = index"
@@ -120,7 +120,7 @@
             </table>
           </div>
         </mat-expansion-panel>
-      </mat-accordion>
+      </mat-accordion> -->
 
       <button mat-button color="warn" class="btn-guardar" type="submit">
         <img src="assets/img/icon/guardar.svg" alt="guardar" />
