--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actuacion-controv-contrc/components/actualizar-tramite-racc/actualizar-tramite-racc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actuacion-controv-contrc/components/actualizar-tramite-racc/actualizar-tramite-racc.component.html
@@ -42,7 +42,8 @@
             </ng-container>
             <ng-container matColumnDef="actuacion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Actuación </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.descripciondeActuacionAdelantada }}
+                <td mat-cell *matCellDef="let element" align="center"> 
+                    <div [innerHtml]="element.descripciondeActuacionAdelantada"></div> 
                 </td>
             </ng-container>
             <ng-container matColumnDef="numeroActuacion">
@@ -68,7 +69,7 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 20%;"> Gestión </th>
                 <td mat-cell *matCellDef="let element" align="center">
                     <button mat-raised-button color="accent" class="btn-table"
-                        *ngIf="element.esCompleto && element.estadoActuacionString!='Finalizada'"
+                        *ngIf="element.esCompleto && element.estadoActuacionString=='Cumplida'"
                         (click)="this.finalizarActuacionDerivada(element.seguimientoActuacionDerivadaId)">
                         Finalizar actuación
                     </button>
