--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-aportantes/form-aportantes.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-aportantes/form-aportantes.component.html
@@ -9,7 +9,7 @@
       <p><b>Tipo de intervención</b>: {{ institucion.tipoIntervencionCodigo }}</p>
       <p><b>Departamento</b>: {{ institucion.institucionEducativa.departamento.descripcion }}</p>
       <p><b>Municipio</b>: {{ institucion.institucionEducativa.municipio.descripcion }}</p>
-      <p><b>Valor total del proyecto</b>: {{ institucion.valorObra + institucion.valorInterventoria | currency:'COP':'symbol-narrow':'.0-0' }}</p>
+      <p ><b>Valor total de {{ tipoSolicitud === listaTipoSolicitud.obra ? 'obra' : 'interventoria' }} </b>: {{ tipoSolicitud === listaTipoSolicitud.obra ? ( institucion.valorObra | currency:'COP':'symbol-narrow':'.0-0' ) : ( institucion.valorInterventoria | currency:'COP':'symbol-narrow':'.0-0' ) }}</p>
       <h2 class="card-subTitle back-color">Aportantes</h2>
 
       <div *ngFor="let proyectoAportante of institucion.proyectoAportante; index as i">
@@ -24,17 +24,17 @@
             <section *ngIf="proyectoAportante.aportante.tipoAportanteId === tiposAportante.ffie" style="margin-top: .5em;">
                 <p><b>Tipo de aportante</b>: {{ proyectoAportante.aportante.tipoAportanteString }}</p>
                 <p><b>Nombre del aportante</b>: {{ proyectoAportante.aportante.tipoAportanteString }}</p>
-                <p><b>Valor del aportante al proyecto</b>: {{ proyectoAportante.valorTotalAportante | currency:'COP':'symbol-narrow':'.0-0' }}</p>
+                <p><b>Valor del aportante al proyecto</b>: {{ tipoSolicitud === listaTipoSolicitud.obra ? ( proyectoAportante.valorObra | currency:'COP':'symbol-narrow':'.0-0' ) : ( proyectoAportante.valorInterventoria | currency:'COP':'symbol-narrow':'.0-0' ) }}</p>
             </section>
             <section *ngIf="proyectoAportante.aportante.tipoAportanteId === tiposAportante.et" style="margin-top: .5em;">
               <p><b>Tipo de aportante</b>: {{ proyectoAportante.aportante.tipoAportanteString }}</p>
-              <p><b>Nombre del aportante</b>: {{ proyectoAportante.aportante.departamento.descripcion }} / {{ proyectoAportante.aportante.municipio?.descripcion }}</p>
-              <p><b>Valor del aportante al proyecto</b>: {{ proyectoAportante.valorTotalAportante | currency:'COP':'symbol-narrow':'.0-0' }}</p>
+              <p><b>Nombre del aportante</b>: {{ getAportante( proyectoAportante.aportante.departamento !== undefined ? proyectoAportante.aportante.departamento.descripcion : undefined, proyectoAportante.aportante.municipio !== undefined ? proyectoAportante.aportante.municipio.descripcion : undefined ) }}</p>
+              <p><b>Valor del aportante al proyecto</b>: {{ tipoSolicitud === listaTipoSolicitud.obra ? ( proyectoAportante.valorObra | currency:'COP':'symbol-narrow':'.0-0' ) : ( proyectoAportante.valorInterventoria | currency:'COP':'symbol-narrow':'.0-0' ) }}</p>
           </section>
           <section *ngIf="proyectoAportante.aportante.tipoAportanteId === tiposAportante.tercero" style="margin-top: .5em;">
             <p><b>Tipo de aportante</b>: {{ proyectoAportante.aportante.tipoAportanteString }}</p>
             <p><b>Nombre del aportante</b>: {{ proyectoAportante.aportante.nombreAportante.nombre }}</p>
-            <p><b>Valor del aportante al proyecto</b>: {{ proyectoAportante.valorTotalAportante | currency:'COP':'symbol-narrow':'.0-0' }}</p>
+            <p><b>Valor del aportante al proyecto</b>: {{ tipoSolicitud === listaTipoSolicitud.obra ? ( proyectoAportante.valorObra | currency:'COP':'symbol-narrow':'.0-0' ) : ( proyectoAportante.valorInterventoria | currency:'COP':'symbol-narrow':'.0-0' ) }}</p>
         </section>
             <section *ngFor="let fuente of proyectoAportante.aportante.fuenteFinanciacion; let j = index">
               <h3 style="margin-bottom: .2em;margin-top: 1em;"><b>Fuente {{ j+1 }}</b></h3>
