--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/form-reporte-actividades-realizadas/form-reporte-actividades-realizadas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/form-reporte-actividades-realizadas/form-reporte-actividades-realizadas.component.html
@@ -14,6 +14,7 @@
                               <quill-editor   class="quill-editor-style card position-relative"
                                               [styles]="editorStyle"
                                               [modules]="config"
+                                              style="width: 100%;"
                                               (onContentChanged)="maxLength($event, 2000)"
                                               formControlName="actividadTecnica"
                                               #obsTecnica
@@ -39,6 +40,7 @@
                               <quill-editor   class="quill-editor-style card position-relative"
                                               [styles]="editorStyle"
                                               [modules]="config"
+                                              style="width: 100%;"
                                               (onContentChanged)="maxLength($event, 2000)"
                                               formControlName="actividadLegal"
                                               #obsLegales
@@ -64,6 +66,7 @@
                               <quill-editor   class="quill-editor-style card position-relative"
                                               [styles]="editorStyle"
                                               [modules]="config"
+                                              style="width: 100%;"
                                               (onContentChanged)="maxLength($event, 2000)"
                                               formControlName="actividadAdministrativaFinanciera"
                                               #obsAdministrativa
@@ -141,6 +144,7 @@
                               <quill-editor   class="quill-editor-style card position-relative"
                                               [styles]="editorStyle"
                                               [modules]="config"
+                                              style="width: 100%;"
                                               (onContentChanged)="maxLength($event, 2000)"
                                               formControlName="actividadTecnicaSiguiente"
                                               #obsTecnica
@@ -166,6 +170,7 @@
                               <quill-editor   class="quill-editor-style card position-relative"
                                               [styles]="editorStyle"
                                               [modules]="config"
+                                              style="width: 100%;"
                                               (onContentChanged)="maxLength($event, 2000)"
                                               formControlName="actividadLegalSiguiente"
                                               #obsLegales
@@ -191,6 +196,7 @@
                               <quill-editor   class="quill-editor-style card position-relative"
                                               [styles]="editorStyle"
                                               [modules]="config"
+                                              style="width: 100%;"
                                               (onContentChanged)="maxLength($event, 2000)"
                                               formControlName="actividadAdministrativaFinancieraSiguiente"
                                               #obsAdministrativa
