--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-social/gestion-social.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-social/gestion-social.component.html
@@ -100,6 +100,7 @@
                                     <quill-editor   class="quill-editor-style card position-relative"
                                                     [styles]="editorStyle"
                                                     [modules]="configTema"
+                                                    style="width: 100%;"
                                                     (onContentChanged)="maxLength($event, 200)"
                                                     formControlName="temaComunidad"
                                                     #obsTema
@@ -125,6 +126,7 @@
                                     <quill-editor   class="quill-editor-style card position-relative"
                                                     [styles]="editorStyle"
                                                     [modules]="configTema"
+                                                    style="width: 100%;"
                                                     (onContentChanged)="maxLength($event, 200)"
                                                     formControlName="conclusion"
                                                     #obsConclusiones
