--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/manejo-residuos-peligrosos/manejo-residuos-peligrosos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/manejo-residuos-peligrosos/manejo-residuos-peligrosos.component.html
@@ -51,6 +51,7 @@
                 <quill-editor   class="quill-editor-style card position-relative"
                                 [styles]="editorStyle"
                                 [modules]="config"
+                                style="width: 100%;"
                                 (onContentChanged)="maxLength($event, 400)"
                                 formControlName="observacion"
                                 #obsResiduosPeligrosos
