--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/otros-manejos/otros-manejos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/otros-manejos/otros-manejos.component.html
@@ -40,6 +40,7 @@
                 <quill-editor   class="quill-editor-style card position-relative"
                                 [styles]="editorStyle"
                                 [modules]="config"
+                                style="width: 100%;"
                                 (onContentChanged)="maxLength($event, 500)"
                                 formControlName="actividad"
                                 #obsOtrosManejos
