--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/manejo-material-insumo/manejo-material-insumo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/manejo-material-insumo/manejo-material-insumo.component.html
@@ -151,6 +151,7 @@
                 <quill-editor   class="quill-editor-style card position-relative"
                                 [styles]="editorStyle"
                                 [modules]="config"
+                                style="width: 100%;"
                                 (onContentChanged)="maxLength($event, 400)"
                                 formControlName="observacion"
                                 #obsMaterialInsumo
