--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/registro-fotografico/registro-fotografico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/registro-fotografico/registro-fotografico.component.html
@@ -58,6 +58,7 @@
                                 <quill-editor   class="quill-editor-style card position-relative"
                                                 [styles]="editorStyle"
                                                 [modules]="config"
+                                                style="width: 100%;"
                                                 (onContentChanged)="maxLength($event, 2000)"
                                                 formControlName="descripcion"
                                                 #obsDescripcion
