--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-actua-tramite-cc/control-y-tabla-actua-tramite-cc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-actua-tramite-cc/control-y-tabla-actua-tramite-cc.component.html
@@ -42,13 +42,14 @@
                     <div *ngIf="element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir'">En
                         proceso de registro</div>
                     <div *ngIf="element.estadoActuacionCodigo=='2'">Finalizada</div>
+                    <div *ngIf="element.estadoActuacionCodigo=='3'">Enviado a comité técnico</div>
                 </td>
             </ng-container>
             <ng-container matColumnDef="gestion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 16%;"> Gestión </th>
                 <td mat-cell *matCellDef="let element">
                     <button mat-raised-button color="accent" class="btn-table"
-                        *ngIf="(element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir')&&element.registroCompletoActuacion=='Completo'"
+                        *ngIf="(element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir')&& element.registroCompletoActuacion=='Completo'"
                         (click)="this.enviarComiteTecnicoTramAct(element.actuacionId)">
                         Finalizar actuación
                     </button>
