--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-actuaciones-no-tai/control-y-tabla-actuaciones-no-tai.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-actuaciones-no-tai/control-y-tabla-actuaciones-no-tai.component.html
@@ -50,7 +50,7 @@
                 <td mat-cell *matCellDef="let element">
                     <button mat-raised-button color="accent" class="btn-table"
                         *ngIf="(element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir')&& element.registroCompletoActuacion=='Completo'"
-                        (click)="this.enviarComiteTecnicoTramAct(element.actuacionId)">
+                        (click)="this.finalizarAct(element.actuacionId)">
                         Finalizar actuación
                     </button>
                     <button mat-raised-button color="accent" class="btn-table"
