--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/tabla-gestion-actas/tabla-gestion-actas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/tabla-gestion-actas/tabla-gestion-actas.component.html
@@ -13,7 +13,7 @@
 
     <ng-container matColumnDef="fechaOrdenDia">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de comité </th>
-      <td mat-cell *matCellDef="let element" align="center"> {{ element.fechaOrdenDia | date: 'dd/MM/yyyy' }} </td>
+      <td mat-cell *matCellDef="let element" align="center"> {{ element.fechaOrdenDia }} </td>
     </ng-container>
 
     <ng-container matColumnDef="numeroComite">
